<resources>
    <string name="app_name">Buy and Sell In Lebanon</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">logout</string>
    <string name="cars_for_sale">Cars for Sale</string>
    <string name="cars_for_rent">Cars for Rent</string>
    <string name="create_new_ad">Create Ad</string>
    <string name="select_pictures">Select Pictures</string>
    <string name="remove_image">Remove Image</string>
    <string name="cancel">Cancel</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="images">Images</string>
    <string name="of_8">of 8</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string name="price">Price</string>
    <string name="vehicles">Vehicles</string>
    <string name="language">en</string>
    <string name="sell_a_car">Sell Car</string>
    <string name="rent_car">Rent Car</string>
    <string name="car_type">Car Type</string>
    <string name="distance_covered">Distance Covered</string>
    <string name="car_model">Car Model</string>
    <string name="transmission_type">Transmission Type</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="steptronic">Steptronic</string>
    <string name="year">Year</string>
    <string name="phone">Phone</string>
    <string name="please_login">Please Login</string>
    <string name="please_fill_required_fields">Please fill required fields</string>
    <string name="show_all">Show All</string>
    <string name="search">Search</string>
    <string name="logged_in">Logged In</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="lira">L.L.</string>
    <string name="dollar">$</string>
    <string name="choose_ad_type">Choose Ad Type</string>
    <string name="categories">Categories</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="share_the_app">Share the App</string>
    <string name="share_via">Share via</string>
    <string name="call">call</string>
    <string name="whatsapp">whatsapp</string>
    <string name="whatsapp_is_not_installed_in_your_phone">Whatsapp app not installed in your phone</string>
    <string name="my_ads">My Ads</string>
    <string name="remove">Remove</string>
    <string name="testAd" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bannerAd" translatable="false">ca-app-pub-4259799291168125/8934390622</string>
    <string name="interstitialAd" translatable="false">ca-app-pub-4259799291168125/2981652959</string>
    <string name="please_wait">Please wait...</string>
    <string name="vehicles_accessories">Vehicles Accessories</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="trucks_and_buses">Trucks And Buses</string>
    <string name="motorcycles">Motorcycles</string>
    <string name="number_plates">Number Plates</string>
    <string name="boats">Boats</string>
    <string name="others_vehicles">Other Vehicles</string>
    <string name="properties">Properties</string>
    <string name="for_sale_apartments_and_villas">For Sale Apartments And Villas</string>
    <string name="for_rent_apartments_and_villas">For Rent Apartments And Villas</string>
    <string name="for_sale_commercial">For Sale Commercial</string>
    <string name="for_rent_commercial">For Rent Commercial</string>
    <string name="lands">Lands</string>
    <string name="chalets_and_cabins">Chalets And Cabins</string>
    <string name="buildings_and_multiple_units">Buildings And Multiple Units</string>
    <string name="rental_wanted">Rental Wanted</string>
    <string name="rooms_for_rent">Rooms For Rent</string>
    <string name="mobile_phones_and_accessories"><![CDATA[Mobile Phones & Accessories]]></string>
    <string name="mobile_phones">Mobile Phones</string>
    <string name="mobile_accessories">Mobile Accessories</string>
    <string name="mobile_numbers">Mobile Numbers</string>
    <string name="smart_watches">Smart Watches</string>
    <string name="electronics_and_home_appliances"><![CDATA[Electronics & Home Appliances]]></string>
    <string name="tv_and_Video"><![CDATA[TV & Video]]></string>
    <string name="home_audio_and_speakers"><![CDATA[Home Audio & Speakers]]></string>
    <string name="kitchen_equipment_and_appliances"><![CDATA[Kitchen Equipment & Appliances]]></string>
    <string name="AC_Cooling_and_Heating"><![CDATA[AC, Cooling & Heating]]></string>
    <string name="cleaning_appliances">Cleaning Appliances</string>
    <string name="washing_machines_and_dryers"><![CDATA[Washing Machines & Dryers]]></string>
    <string name="laptops_tablets_computers">Laptops, Tablets, Computers</string>
    <string name="computer_parts_and_it_accessories"><![CDATA[Computer Parts & IT Accessories]]></string>
    <string name="cameras">Cameras</string>
    <string name="gaming_consoles_and_accessories"><![CDATA[Gaming Consoles & Accessories]]></string>
    <string name="video_games">Video Games</string>
    <string name="other_home_appliances">Other Home Appliances</string>
    <string name="home_furniture_and_decor"><![CDATA[Home Furniture & Decor]]></string>
    <string name="living_room">Living Room</string>
    <string name="bedroom">Bedroom</string>
    <string name="dining_room">Dining Room</string>
    <string name="kitchen_and_kitchenware"><![CDATA[Kitchen & Kitchenware]]></string>
    <string name="bathroom">Bathroom</string>
    <string name="home_decoration_and_accessories"><![CDATA[Home Decoration & Accessories]]></string>
    <string name="other_home_furniture_and_decor"><![CDATA[Other Home Furniture & Decor]]></string>
    <string name="fashion_and_beauty"><![CDATA[Fashion & Beauty]]></string>
    <string name="clothing_for_men">Clothing for Men</string>
    <string name="accessories_for_men">Accessories for Men</string>
    <string name="clothing_for_women">Clothing for Women</string>
    <string name="accessories_for_women">Accessories for Women</string>
    <string name="makeup_and_cosmetics"><![CDATA[Make-up & Cosmetics]]></string>
    <string name="jewelry_and_faux_bijoux"><![CDATA[Jewelry & Faux-Bijoux]]></string>
    <string name="watches">Watches</string>
    <string name="luggage">Luggage</string>
    <string name="pets">Pets</string>
    <string name="animal_and_pet_accessories"><![CDATA[Animal & Pet accessories]]></string>
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="birds">Birds</string>
    <string name="livestock">Livestock</string>
    <string name="horses">Horses</string>
    <string name="fish">Fish</string>
    <string name="other_animals_and_pets"><![CDATA[Other Animals & Pets]]></string>
    <string name="kids_and_babies"><![CDATA[Kids & Babies]]></string>
    <string name="toys_for_kids">Toys for kids</string>
    <string name="strollers_and_seats"><![CDATA[Strollers & Seats]]></string>
    <string name="kids_and_babies_clothing"><![CDATA[Kids & Babies Clothing]]></string>
    <string name="cribs_and_bedroom_furniture"><![CDATA[Cribs & Bedroom Furniture]]></string>
    <string name="bathing_accessories">Bathing Accessories</string>
    <string name="feeding_and_nursing"><![CDATA[Feeding & Nursing]]></string>
    <string name="safety_and_monitors"><![CDATA[Safety & Monitors]]></string>
    <string name="other_for_kids_and_babies"><![CDATA[Other for Kids & Babies]]></string>
    <string name="sports_and_equipments"><![CDATA[Sports & Equipments]]></string>
    <string name="bicycles_and_accessories"><![CDATA[Bicycles & Accessories]]></string>
    <string name="outdoors_and_camping"><![CDATA[Outdoors & Camping]]></string>
    <string name="gym_fitness_and_fighting_sports"><![CDATA[Gym, Fitness & Fighting sports]]></string>
    <string name="ball_sports">Ball Sports</string>
    <string name="billiard_and_similar_games"><![CDATA[Billiard & Similar Games]]></string>
    <string name="ski_and_winter_sports"><![CDATA[Ski & Winter Sports]]></string>
    <string name="water_sports_and_diving"><![CDATA[Water Sports & Diving]]></string>
    <string name="tennis_and_racket_sports"><![CDATA[Tennis & Racket Sports]]></string>
    <string name="other_sports">Other Sports</string>
    <string name="hobbies_music_art_and_books"><![CDATA[Hobbies, Music, Art & Books]]></string>
    <string name="antiques_and_collectibles"><![CDATA[Antiques & Collectibles]]></string>
    <string name="musical_instruments">Musical Instruments</string>
    <string name="books">Books</string>
    <string name="movies_and_music"><![CDATA[Movies & Music]]></string>
    <string name="games_and_hobbies"><![CDATA[Games & Hobbies]]></string>
    <string name="tickets_and_vouchers"><![CDATA[Tickets & Vouchers]]></string>
    <string name="stationery_and_study_tools"><![CDATA[Stationery & Study Tools]]></string>
    <string name="other_items">Other Items</string>
    <string name="jobs">Jobs</string>
    <string name="job_seekers">Job Seekers</string>
    <string name="jobs_available">Jobs Available</string>
    <string name="business_and_industrial"><![CDATA[Business & Industrial]]></string>
    <string name="restaurants_equipment">Restaurants Equipment</string>
    <string name="industrial_and_construction_equipment"><![CDATA[Industrial & Construction Equipment]]></string>
    <string name="medical_and_wellbeing_equipment"><![CDATA[Medical & Wellbeing Equipment]]></string>
    <string name="retail_and_shop_equipement"><![CDATA[Retail & Shop Equipement]]></string>
    <string name="business_opportunites_and_shops_liquidation"><![CDATA[Business Opportunites & Shops Liquidation]]></string>
    <string name="other_business_and_industrial"><![CDATA[Other Business & Industrial]]></string>
    <string name="services">Services</string>
    <string name="home_improvements_and_repair"><![CDATA[Home Improvements & Repair]]></string>
    <string name="personal_services">Personal Services</string>
    <string name="corporate_services">Corporate Services</string>
    <string name="vehicle_repair_services">Vehicle Repair Services</string>
    <string name="transportation_and_logistics_services"><![CDATA[Transportation & logistics Services]]></string>
    <string name="iT_design_and_printing_services"><![CDATA[IT, Design & Printing Services]]></string>
    <string name="other_services">Other Services</string>
    <string name="menu_review">Review App</string>
    <string name="actions">Actions</string>
    <string name="planting_and_food">Planting And Food</string>
    <string name="garden">Garden</string>
    <string name="food">Food</string>
    <string name="please_review_our_app">الرجاء قيم التطبيق</string>
    <string name="amount">المبلغ</string>
    <string name="type">النوع</string>
    <string name="contact">التواصل</string>
    <string name="price_rate">سعر الصرف</string>
    <string name="place_dollar">المكان</string>
    <string name="date_dollar">التاريخ</string>
    <string name="menu_share_dollar">نشر السعر</string>
</resources>