<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/categories" />
<!--        <item-->
<!--            android:id="@+id/nav_dollar_market"-->
<!--            android:icon="@drawable/ic_attach_money_black_24dp"-->
<!--            android:onClick="goToDollarMarket"-->
<!--            android:title="@string/dollar_market" />-->
<!--        <item-->
<!--            android:id="@+id/nav_collect_and_win"-->
<!--            android:icon="@drawable/ic_attach_money_black_24dp"-->
<!--            android:title="@string/collect_and_win" />-->
        <item
            android:id="@+id/nav_my_ads"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/my_ads" />
        <!--        <item-->
        <!--            android:id="@+id/nav_gallery"-->
        <!--            android:icon="@drawable/ic_menu_gallery"-->
        <!--            android:title="@string/menu_gallery" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_slideshow"-->
        <!--            android:icon="@drawable/ic_menu_slideshow"-->
        <!--            android:title="@string/menu_slideshow" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_tools"-->
        <!--            android:icon="@drawable/ic_menu_manage"-->
        <!--            android:title="@string/menu_tools" />-->
    </group>

    <item android:title="@string/actions">
        <menu>
            <item
                android:id="@+id/nav_add_ad"
                android:icon="@drawable/ic_add_black_24dp"
                android:onClick="createNewAd"
                android:title="@string/create_new_ad" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:onClick="shareApp"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_review"
                android:icon="@drawable/ic_menu_review"
                android:onClick="reviewApp"
                android:title="@string/menu_review" />

            <!--            <item-->
            <!--                android:id="@+id/nav_sign_in"-->
            <!--                android:title="@string/sign_in" />-->
            <!--            <item-->
            <!--                android:id="@+id/nav_send"-->
            <!--                android:icon="@drawable/ic_menu_send"-->
            <!--                android:title="@string/menu_send" />-->
        </menu>
    </item>

</menu>
